--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: anleclab <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: anleclab <anleclab@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/06 17:19:55 by anleclab          #+#    #+#              #
-#    Updated: 2019/03/08 11:57:57 by anleclab         ###   ########.fr        #
+#    Updated: 2019/03/15 13:38:11 by anleclab         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -90,7 +90,8 @@ SRC_NAMES = ft_memset.c \
 	  ft_fopen.c \
 	  ft_fclose.c \
 	  ft_fgetc.c \
-	  ft_char_realloc.c
+	  ft_char_realloc.c \
+	  ft_intlen.c
 SRC = $(addprefix $(SRC_DIR)/, $(SRC_NAMES))
 OBJ_DIR = obj
 OBJ_NAMES = $(SRC_NAMES:.c=.o)
