changed A LOT of stuff, now parser is segving

--- a/bonus_visualizer/Makefile
+++ b/bonus_visualizer/Makefile
@@ -6,7 +6,7 @@
 #    By: anleclab <anleclab@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/15 15:21:21 by anleclab          #+#    #+#              #
-#    Updated: 2019/03/15 19:22:10 by dtrigalo         ###   ########.fr        #
+#    Updated: 2019/03/19 18:45:12 by anleclab         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,7 +17,6 @@ CFLAGS = -Wall -Wextra -Werror -g3 -fsanitize=address
 SRC = main.c \
 	  parser.c \
 	  parser_steps.c \
-	  set_weights.c \
 	  count_and_fill_input.c \
 	  draw_tunnels.c \
 	  draw_rooms.c \
