--- a/bonus_visualizer/Makefile
+++ b/bonus_visualizer/Makefile
@@ -6,7 +6,7 @@
 #    By: anleclab <anleclab@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/15 15:21:21 by anleclab          #+#    #+#              #
-#    Updated: 2019/04/02 10:06:23 by anleclab         ###   ########.fr        #
+#    Updated: 2019/04/02 12:52:59 by dtrigalo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,8 @@ SRC = main.c \
 	  fill_adjacency_matrix.c \
 	  set_instructions.c \
 	  event_manager.c \
-	  scale.c
+	  scale.c \
+	  draw_start_ants.c
 SRCSFD = srcs/
 OBJSFD = objs/
 OBJS = $(addprefix $(OBJSFD),$(SRC:.c=.o))
