--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: anleclab <anleclab@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/06 17:19:55 by anleclab          #+#    #+#              #
-#    Updated: 2019/03/15 13:38:11 by anleclab         ###   ########.fr        #
+#    Updated: 2019/04/03 14:11:11 by dtrigalo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,8 @@ NAME = libft.a
 FLAGS = -Wall -Werror -Wextra
 INC = -I./inc
 SRC_DIR = src
-SRC_NAMES = ft_memset.c \
+SRC_NAMES = ft_round_double.c \
+	  ft_memset.c \
 	  ft_bzero.c \
 	  ft_memcpy.c \
 	  ft_memccpy.c \
